Add back window ids to the drag data payload.

This e.g. makes dropping tasks on the pager work again.

BUG:322567